--- a/color.html
+++ b/color.html
@@ -8,9 +8,9 @@
 <body>
     <h1 id="color">Color</h1>
 
-    <button id="red">Red</button>
-    <button id="blue">Blue</button>
-    <button id="green">Green</button>
+    <button data-text="Red" data-color="red">Red</button>
+    <button data-text="Blue" data-color="blue">Blue</button>
+    <button data-text="Green" data-color="green">Green</button>
 
     <script src="script.js"></script>
 </body>
